Fixed: header-mobile-menu hasn't covered all the screen

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -17,6 +17,8 @@
 }
 
 html {
+    width: 100%;
+    height: 100%;
     scroll-behavior: smooth;
 }
 
@@ -26,6 +28,8 @@ html {
 }
 
 body {
+    width: 100%;
+    height: 100%;
     font-family: 'Druk-Wide', sans-serif;
     font-weight: 700;
     background: var(--section-color);
