--- a/src/sass/blocks/_header-mobile.scss
+++ b/src/sass/blocks/_header-mobile.scss
@@ -1,4 +1,5 @@
 .header-mobile {
+    z-index: 2;
     position: fixed;
     top: 16px;
     left: 50%;
@@ -11,7 +12,6 @@
     background: rgba(17, 17, 17, 0.6);
     backdrop-filter: blur(25px);
     border-radius: 40px;
-    z-index: 1;
 
     &--no-bg {
         background: none;
@@ -43,23 +43,24 @@
 }
 
 .header-mobile__menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
     display: flex;
     flex-flow: column nowrap;
     gap: 32px;
     justify-content: center;
     align-items: center;
     background: #181818;
-    opacity: 0;
     transition: all .4s;
+    z-index: -1;
+    opacity: 0;
 
     &--active {
         opacity: 1;
-        z-index: 0;
+        z-index: 1;
+        overflow: hidden;
     }
 
     &-link {
